feat: java 25 language features